// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar sticky-top navbar-expand-lg navbar-light bg-dark"
  >
    <li
      class="nav-item"
    >
      <a
        aria-current="page"
        class="nav-link active"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/jobs"
      >
        Jobs
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/companies"
      >
        Companies
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/profile"
      >
        Profile
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        aria-current="page"
        class="nav-link active"
        href="/"
      >
        Logout testuser
      </a>
    </li>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="navbar sticky-top navbar-expand-lg navbar-light bg-dark"
  >
    <li
      class="nav-item"
    >
      <a
        aria-current="page"
        class="nav-link active"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/login"
      >
        login
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/signup"
      >
        Sign Up
      </a>
    </li>
  </nav>
</DocumentFragment>
`;
